@@ -1,17 +1,18 @@
 package com.culturefinder.songdodongnae.delicious_spot.controller;
 
 import com.culturefinder.songdodongnae.delicious_spot.dto.DeliciousSpotThumbnailResponseDto;
-import com.culturefinder.songdodongnae.delicious_spot.dto.ResponseContainer;
+import com.culturefinder.songdodongnae.delicious_spot.dto.SingleDeliciousSpotResponseDto;
+import com.culturefinder.songdodongnae.utils.ResponseContainer;
 import com.culturefinder.songdodongnae.delicious_spot.repository.DeliciousSpotRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -22,14 +23,23 @@ public class DeliciousSpotController {
 
     @GetMapping("/thumbnails")
     public ResponseEntity<ResponseContainer<List<DeliciousSpotThumbnailResponseDto>>> thumbnails_get() {
-        return new ResponseEntity<>(
-                new ResponseContainer<>(
-                        HttpStatus.OK, "",
-                        deliciousSpotRepository.findAllDeliciousSpotList()
-                        .stream()
-                        .map(DeliciousSpotThumbnailResponseDto::new)
-                        .collect(Collectors.toList())
-                ), HttpStatus.OK
-        );
+        List<DeliciousSpotThumbnailResponseDto> data = deliciousSpotRepository.findAllDeliciousSpotList()
+                .stream()
+                .map(DeliciousSpotThumbnailResponseDto::new)
+                .toList();
+
+        return new ResponseContainer<>(HttpStatus.OK, "", data).toResponseEntity();
     }
+
+    @GetMapping("/list/{id}")
+    public ResponseEntity<ResponseContainer<List<SingleDeliciousSpotResponseDto>>> list_get(@PathVariable Long id) {
+        List<SingleDeliciousSpotResponseDto> data = deliciousSpotRepository.findAllDeliciousSpotById(id)
+                .getDeliciousSpots()
+                .stream()
+                .map(SingleDeliciousSpotResponseDto::new)
+                .toList();
+
+        return new ResponseContainer<>(HttpStatus.OK, "", data).toResponseEntity();
+    }
+
 }
